Finalizado kit-section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
       <img src="./assets/bookmark-yellow.png" alt="">
       <img src="./assets/bookmark-purple.png" alt="">
       <img src="./assets/pin.png" alt="">
+      <img src="./assets/ArrowUp.svg" alt="">
+      <img src="./assets/arrowleft.svg" alt="">
+      <img src="./assets/arrowdow.svg" alt="">
+      <span>Livro em capa dura</span>
+      <span>Broche exclusivo</span>
+      <span>Marca páginas temático</span>
     </div>
   </section>
 </body>
