--- a/index.html
+++ b/index.html
@@ -73,6 +73,135 @@
       <span>Marca páginas temático</span>
     </div>
   </section>
+
+  <section class="container signature">
+    <div class="signature-title">
+      <h2>Assinatura </h2>
+      <h2>Encantos Literários</h2>
+    </div>
+
+    <div class="cards">
+      <div class="card">
+        <div class="card-header">
+          <h3>Mensal</h3>
+          <div class="price-month">
+            <strong>R$ 59,90</strong>
+            <span>/mês</span>
+          </div>
+          <div class="price-year">
+            <span>R$ 718,80</span>
+            <span>por ano</span>
+          </div>
+        </div>
+
+        <div class="card-body">
+          <ul>
+            <li>
+              <img src="./assets/icons/star-blue.svg" alt="star">
+              <span>Kit mensal com livro temático</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star-blue.svg" alt="star">
+              <span>Broche e marca páginas exclusivo</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star-blue.svg" alt="star">
+              <span>Acesso à comunidade literária</span>
+            </li>
+          </ul>
+
+          <a href="" class="btn-card">Assinar mensal</a>
+        </div>
+
+
+
+      </div>
+
+      <div class="card pink-dark">
+        <div class="card-header">
+          <h3>Mensal</h3>
+          <div class="price-month">
+            <strong>R$ 52,90</strong>
+            <span>/mês</span>
+          </div>
+          <div class="price-year">
+            <span>R$ 634,80</span>
+            <span>por ano</span>
+          </div>
+        </div>
+
+        <div class="card-body">
+          <ul>
+            <li>
+              <img src="./assets/icons/star.svg" alt="star">
+              <span>Kit mensal com livro temático</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star.svg" alt="star">
+              <span>Broche e marca páginas exclusivo</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star.svg" alt="star">
+              <span>Acesso à comunidade literária</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star.svg" alt="star">
+              <span>Membro premium do clube</span>
+            </li>
+          </ul>
+
+          <a href="" class="btn-card">Assinar mensal</a>
+        </div>
+
+
+
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <h3>Mensal</h3>
+          <div class="price-month">
+            <strong>R$ 48,90</strong>
+            <span>/mês</span>
+          </div>
+          <div class="price-year">
+            <span>R$ 586,80</span>
+            <span>por ano</span>
+          </div>
+        </div>
+
+        <div class="card-body">
+          <ul>
+            <li>
+              <img src="./assets/icons/star-blue.svg" alt="star">
+              <span>Kit mensal com livro temático</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star-blue.svg" alt="star">
+              <span>Broche e marca páginas exclusivo</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star-blue.svg" alt="star">
+              <span>Acesso à comunidade literária</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star-blue.svg" alt="star">
+              <span>Membro premium do clube</span>
+            </li>
+            <li>
+              <img src="./assets/icons/star-blue.svg" alt="star">
+              <span>Planner anual de leituras</span>
+            </li>
+          </ul>
+
+          <a href="" class="btn-card">Assinar mensal</a>
+        </div>
+
+
+
+      </div>
+    </div>
+  </section>
 </body>
 
 
