--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
 
       <div class="card pink-dark">
         <div class="card-header">
-          <h3>Mensal</h3>
+          <div>
+            <h3>Semestral</h3>
+            <div class="tag-signature">popular</div>
+          </div>
+
           <div class="price-month">
             <strong>R$ 52,90</strong>
             <span>/mês</span>
@@ -159,7 +163,7 @@
 
       <div class="card">
         <div class="card-header">
-          <h3>Mensal</h3>
+          <h3>Anual</h3>
           <div class="price-month">
             <strong>R$ 48,90</strong>
             <span>/mês</span>
